--- a/planning/Bericht/Bericht.tex
+++ b/planning/Bericht/Bericht.tex
@@ -244,7 +244,10 @@ Bei Winkeln, die ein vielfaches von $90$ betragen, sind alle Landebahnen gleich 
 
 Bei Bahnen, die diagonal verlaufen, sind die ersten Bahnen kurz, nehmen dann in ihrer Länge zu, bis als Startpunkt die nächstliegende Ecke erreicht ist, und nimmt dann in ihrer Länge wieder ab (siehe Abbildung~\ref{scandiagonal}). 
 Weiterhin ist zu beachten, dass je nach Topologie der Bahn unterschiedlich viele (im Grenzfall gar keine) geeigneten Flächen gefunden werden, die dann fein granular weiter untersucht werden müssen (längste Bahn und die mit der kleinsten Varianz). So ist schwer vorhersagbar, wie lange die Einzellaufzeit eines Threads ist.
-Für die zur Verfügung gestellten Kartendaten von Nordrhein-Westfalen sind die Laufzeiten in Abhängigkeit von Winkel und Threadanzahl in Tabelle x dargestellt. Das verwendete System zur Analyse war eine virtualisierte VM (Centos 7.0, xx CPUs, xx GB RAM) 
+Für die zur Verfügung gestellten Kartendaten von Nordrhein-Westfalen sind die Laufzeiten in Abhängigkeit von Winkel und Threadanzahl in Tabelle x dargestellt. Das verwendete System zur Analyse war eine virtualisierte VM (Centos Linux 7.0, 1 - 8 CPUs, 6 GB RAM, Host System Windows 7, Host hardware: i7-4770K , 3.5 Ghz ) 
+
+
+
 
 Eine weiterführende Analyse war aufgrund mangelnder Hardwareressourcen nicht möglich.
 
